--- a/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
+++ b/translations/kangyur/translations/061-012_toh192-the_prophecy_of_ksemavati.xml
@@ -6,40 +6,33 @@
                         <titleStmt>
                                 <title type="mainTitle" xml:lang="en">The Prophecy of
                                         Kṣemavatī</title>
-                                <!--<title type="mainTitle" xml:lang="Sa-Ltn">kṣemavatīvyākaraṇasūtra</title>-->
+                                <title type="mainTitle" xml:lang="Sa-Ltn">Ārya­kṣemavatī­vyākaraṇa­</title>
+                                <title type="mainTitle" xml:lang="bo">འཕགས་པ་བདེ་ལྡན་མ་ལུང་བསྟན་པ།</title>
                                 <title type="mainTitle" xml:lang="Bo-Ltn">’phags pa bde ldan ma lung
                                         bstan pa</title>
-                                <title type="mainTitle" xml:lang="bo">འཕགས་པ་བདེ་ལྡན་མ་ལུང་བསྟན་པ།</title>
-                                <title type="mainTitle" xml:lang="Sa-Ltn">Ārya­kṣemavatī­vyākaraṇa­</title>
-                                <!--<title type="mainTitle" xml:lang="Bo-Ltn">bde ldan ma lung bstan pa'i mdo/</title>-->
-                                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­kṣemavatī­vyākaraṇa­nāma­mahāyāna­sūtra</title>
                                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra “The
                                         Prophecy of Kṣemavatī”</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་བདེ་ལྡན་མ་ལུང་བསྟན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­kṣemavatī­vyākaraṇa­nāma­mahāyāna­sūtra</title>
                                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa bde ldan ma lung
                                         bstan pa zhes bya ba theg pa chen po’i mdo</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་བདེ་ལྡན་མ་ལུང་བསྟན་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                                 <title type="otherTitle" xml:lang="zh">差摩婆帝授記經</title>
                                 <author role="translatorMain" ref="eft:team-49">Translated by the
                                         Subhashita Translation Group<lb/>under the patronage and
                                         supervision of 84000: Translating the Words of the
                                         Buddha</author>
-                                <author role="translatorEng" ref="eft:person-60">Benjamin
-                                        Ewing</author>
-                                <author role="translatorEng" ref="eft:person-67">Lowell
-                                        Cook</author>
-                                <editor role="projectEditor" ref="eft:person-74">Ryan
-                                        Damron</editor>
-                                <editor role="copyEditor" ref="eft:person-66">Joseph
-                                        McClellan</editor>
-                                <editor role="projectEditor" ref="eft:person-50">Andreas
-                                        Doctor</editor>
-                                <editor role="projectEditor" ref="eft:person-250">Rory
-                                        Lindsay</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-391">Sameer
-                                        Dhingra</editor>
+                                <author role="translatorEng" ref="eft:person-60">Benjamin Ewing</author>
+                                <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
+                                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
+                                <editor role="copyEditor" ref="eft:person-66">Joseph McClellan</editor>
+                                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+                                <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.17 <date>2020</date>
+                <edition>v 0.0.18 <date>2020</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="2">
@@ -79,7 +72,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-04-07T08:01:53.835Z" user="admin">07/04/2022 08:01:53</note>
+                                <note type="lastUpdated" date-time="2022-07-07T09:48:05.418Z" user="admin">07/07/2022 09:48:05</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-27T13:19:08.142Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2020-11-12T11:05:11.938Z" user="line-tofte">3</note>
@@ -99,23 +92,16 @@
                                 <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-28T08:55:05.846Z" user="line-tofte">Auto
                                         (update-contributors)</note>
                                 <note type="updated" update="translation-status" value="2.e" date-time="2021-11-02T13:12:48.789Z" user="line-tofte">2.e</note>
-
                                 <note type="updated" update="text-version" value="0.0.8" date-time="2021-11-02T13:12:48.789Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="text-version" value="0.0.9" date-time="2021-11-02T13:14:46.938Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-
                                 <note type="updated" update="translation-status" value="2.d" date-time="2021-11-24T09:32:10.811Z" user="line-tofte">2.d</note>
-
                                 <note type="updated" update="text-version" value="0.0.10" date-time="2021-11-24T09:32:10.811Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="text-version" value="0.0.11" date-time="2021-11-24T09:32:44.928Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-
                                 <note type="updated" update="translation-status" value="2.c" date-time="2022-02-01T10:53:12.364Z" user="line-tofte">2.c</note>
-
                                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-02-01T10:53:12.364Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
                                 <note type="updated" update="translation-status" value="2.b" date-time="2022-03-09T14:37:00.808Z" user="line-tofte">2.b</note>
@@ -128,8 +114,9 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.16" date-time="2022-03-15T08:38:14.975Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2022-04-07T08:01:46.249Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.17" date-time="2022-04-07T08:01:46.249Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2022-04-07T08:01:46.249Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.17" date-time="2022-04-07T08:01:46.249Z" user="line-tofte">Auto (update-publication-status)</note>
+                            <note type="updated" update="text-version" value="0.0.18" date-time="2022-07-07T09:47:57.82Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -671,7 +658,7 @@ Notes
                                                 Ryukoku University, 1950.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary">
+                        <div type="glossary" status="excluded">
                                 <list type="glossary">
                                         <item>
                                                 <gloss xml:id="UT22084-061-012-75" type="term">
