--- a/translations/kangyur/placeholders/064-002_toh232-the_great_cloud_sutra.xml
+++ b/translations/kangyur/placeholders/064-002_toh232-the_great_cloud_sutra.xml
@@ -20,11 +20,11 @@
                 <sponsor ref="sponsors.xml#sponsor-3">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2019</date>
+                <edition>v 0.0.13 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-064-002"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-07T09:23:35.408Z" user="admin">07/07/2022 09:23:35</note>
+                <note type="lastUpdated" date-time="2022-07-08T10:32:33.549Z" user="admin">08/07/2022 10:32:33</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -59,6 +59,8 @@
                 <note type="updated" update="translation-status" value="2.b" date-time="2022-07-07T09:22:46.986Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-07T09:22:46.986Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-07-07T09:23:27.798Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2022-07-08T10:32:26.12Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2022-07-08T10:32:26.12Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
