--- a/translations/kangyur/placeholders/064-002_toh232-the_great_cloud_sutra.xml
+++ b/translations/kangyur/placeholders/064-002_toh232-the_great_cloud_sutra.xml
@@ -17,10 +17,11 @@
                 <editor role="projectEditor" ref="eft:person-262">David Higgins</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
                 <sponsor ref="sponsors.xml#sponsor-3">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2019</date>
+                <edition>v 0.0.14 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-08T10:32:33.549Z" user="admin">08/07/2022 10:32:33</note>
+                <note type="lastUpdated" date-time="2022-07-08T10:41:56.019Z" user="admin">08/07/2022 10:41:56</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -61,6 +62,7 @@
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-07-07T09:23:27.798Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2022-07-08T10:32:26.12Z" user="line-tofte">2.a</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2022-07-08T10:32:26.12Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2022-07-08T10:41:48.459Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
