--- a/translations/kangyur/translations/039-002_toh46-the_teaching_on_clearing_the_boundless_gates.xml
+++ b/translations/kangyur/translations/039-002_toh46-the_teaching_on_clearing_the_boundless_gates.xml
@@ -39,7 +39,7 @@
                 <sponsor ref="sponsors.xml#sponsor-22">Qiang Li (李强) and Ya Wen (文雅)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.6 <date>2021</date>
+                <edition>v 1.0.7 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -76,7 +76,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T15:55:50.854Z" user="admin">29/06/2022 15:55:50</note>
+                <note type="lastUpdated" date-time="2022-07-10T12:56:26.485Z" user="admin">10/07/2022 12:56:26</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-03T07:46:54.268Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-12-03T07:47:20.13Z" user="andreas">2.e</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2019-12-09T09:32:19.448Z" user="andreas">2.d</note>
@@ -101,6 +101,7 @@
                 <note type="updated" update="text-version" value="1.0.4" date-time="2021-04-21T21:41:04.027Z" user="celso">add @xml:lang tag to  a few Chinese strings that were missing</note>
                 <note type="updated" update="text-version" value="1.0.5" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.6" date-time="2022-06-29T15:55:43.271Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.0.7" date-time="2022-07-10T12:56:22.643Z" user="john">Harmonization of trailer and colophon.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -3556,15 +3557,15 @@
                         with all its gods, gandharvas, humans, and asuras rejoiced and praised the
                         Blessed One’s words. </p>
                     <milestone unit="chunk" xml:id="UT22084-039-002-469"/>
-                    <trailer tid="327">This concludes the chapter called “<title xml:lang="en">The
-                            Teaching on the Purification of Boundless Gateways</title>.” It is the
-                        second chapter within the one hundred thousand sections in the Dharma
+                    <trailer tid="327">This concludes “<title xml:lang="en">The
+                            Teaching on the Purification of Boundless Gateways</title>,” the
+                        second of the one hundred thousand sections of the Dharma
                         discourse known as The Noble Great Heap of Jewels.</trailer>
                 </div>
                 <div type="colophon" xml:id="UT22084-039-002-colophon">
                     <head type="colophon" tid="328">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-039-002-337"/>
-                    <p tid="329">This was translated, edited, and finalized by the Indian preceptor
+                    <p tid="329">Translated, edited, and finalized by the Indian preceptor
                         Surendrabodhi and the translator-editor Bandé Paltsek Rakṣita.</p>
                 </div>
             </div>
