--- a/translations/kangyur/translations/040-002_toh51-the_teaching_on_the_armor_array.xml
+++ b/translations/kangyur/translations/040-002_toh51-the_teaching_on_the_armor_array.xml
@@ -29,7 +29,7 @@
                 <sponsor ref="sponsors.xml#sponsor-202">Qing Dao Zheng Jian Group</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2021</date>
+                <edition>v 1.0.4 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -64,7 +64,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-14T07:54:14.531Z" user="admin">14/06/2022 07:54:14</note>
+                <note type="lastUpdated" date-time="2022-07-10T12:58:53.676Z" user="admin">10/07/2022 12:58:53</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:09:48.105Z" user="mike">2.f</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-09-11T11:28:36.868Z" user="line-tofte">2.e</note>
@@ -90,6 +90,8 @@
                 <note type="updated" update="translation-status" value="1" date-time="2021-05-14T05:20:26.207Z" user="mike">1</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2021-05-14T05:20:26.207Z" user="mike">First published version</note>
                 <note type="updated" update="text-version" value="1.0.1" date-time="2021-07-27T21:37:39.964Z" user="celso">kiṃnara to kinnara</note>
+                <note type="updated" update="text-version" value="1.0.3" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.0.4" date-time="2022-07-10T12:58:49.853Z" user="john">Harmonization of trailer and colophon</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -6697,19 +6699,20 @@
                     <milestone unit="chunk" xml:id="UT22084-040-002-883"/>
                     <p tid="843">When the Blessed One taught this Dharma, countless bodhisattvas gained the acceptance
                         that phenomena are unborn. Countless beings ripened their roots of virtue. When the Blessed One
-                        had taught this, the bodhisattva great being Anantamati, along with the other bodhisattva great
+                        had so taught, the bodhisattva great being Anantamati, along with the other bodhisattva great
                         beings and the world with its gods, humans, and asuras rejoiced and praised what the Blessed One
                         had said.</p>
                     <milestone unit="chunk" xml:id="UT22084-040-002-884"/>
-                    <trailer tid="844">This completes <title xml:lang="en">The Teaching of the Armor Array</title>. It
-                        is the seventh chapter within the one hundred thousand sections of the Dharma discourse known as
-                            <title xml:lang="en">The Noble Great Heap of Jewels</title>.</trailer>
+                    <trailer tid="844">This concludes <title xml:lang="en">The Teaching of the Armor Array</title>, 
+                        the seventh of the one hundred thousand sections of the Dharma discourse known as
+                            The Noble Great Heap of Jewels.</trailer>
                 </div>
                 <div type="colophon" xml:id="UT22084-040-002-colophon">
                     <head type="colophon" tid="845">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-040-002-885"/>
-                    <p tid="846">This was translated from the Chinese by the translator Gö Chödrup.<note place="end" xml:id="UT22084-040-002-886"> The translator is only identified in the Narthang and Lhasa
-                            (Zhol) editions of the Kangyur. Additionally, only the Narthang edition specifies that it
+                    <p tid="846">Translated from the Chinese by the translator Gö Chödrup.<note place="end" xml:id="UT22084-040-002-886"> The 
+                        translator is only identified in the Narthang and Lhasa
+                            (Zhol) editions of the Kangyur, and only the Narthang edition specifies that it
                             was translated from the Chinese. Pedurma page 356, notes 13–14.</note>
                     </p>
                 </div>
