--- a/translations/kangyur/translations/040-003_toh52_indivisible_nature.xml
+++ b/translations/kangyur/translations/040-003_toh52_indivisible_nature.xml
@@ -29,7 +29,7 @@
                 <consultant role="advisor" ref="contributors.xml#person-230">Tom Tillemans</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.13.13 <date>2022</date>
+                <edition>v 1.13.15 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -62,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-02-16T14:12:07.204Z" user="admin">16/02/2022 14:12:07</note>
+                <note type="lastUpdated" date-time="2022-07-10T13:00:05.752Z" user="admin">10/07/2022 13:00:05</note>
                 <note type="updated" update="text-version" value="v 1.12" date-time="2019-06-18T15:51:36.376Z" user="celso">v 1.12
                     2019</note>
                 <note type="updated" update="text-version" value="v 1.13" date-time="2019-06-21T14:19:39.547Z" user="celso">v 1.13
@@ -83,7 +83,7 @@
     <note type="updated" update="text-version" value="1.13.9" date-time="2021-02-01T12:34:45.143Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="1.13.10" date-time="2021-04-15T12:10:32.678Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="1.13.11" date-time="2021-04-22T23:49:33.779Z" user="celso">corrected minor typo</note>
-                <note type="updated" update="text-version" value="1.13.12" date-time="2021-04-28T14:40:53.329Z" user="celso">Corrected reference to Ch. source and added bibl entry</note>    <note type="updated" update="text-version" value="1.13.13" date-time="2022-02-16T14:12:01.599Z" user="celso">resolved new glossary locations due to terms adjacent to hyphens</note>
+                <note type="updated" update="text-version" value="1.13.12" date-time="2021-04-28T14:40:53.329Z" user="celso">Corrected reference to Ch. source and added bibl entry</note>    <note type="updated" update="text-version" value="1.13.13" date-time="2022-02-16T14:12:01.599Z" user="celso">resolved new glossary locations due to terms adjacent to hyphens</note>    <note type="updated" update="text-version" value="1.13.14" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.13.15" date-time="2022-07-10T13:00:01.951Z" user="john">Harmonization of trailer and colophon</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1241,14 +1241,18 @@
                             Teaching on the Indivisible Nature of the Realm of Phenomena</title>. You should also remember it as <title xml:lang="en">The Inquiry of the God Ratnavara</title>. You should also remember it as <title xml:lang="en">Youthful Mañjuśrī’s Instructions</title>.”</p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-040-003-223"/>
-                    <p tid="227">When the Blessed One had spoken these words, venerable Ānanda, youthful Mañjuśrī, the bodhisattva
+                    <p tid="241">When the Blessed One had spoken these words, venerable Ānanda, youthful Mañjuśrī, the bodhisattva
                         Ratnavara, the bodhisattvas who had arrived from all the various buddha realms, as well as the world with its gods,
                         humans, demigods, and gandharvas rejoiced and praised the words of the Blessed One.</p>
+                    <milestone unit="chunk" xml:id="UT22084-040-003-369"/>
+                    <trailer tid="242">This concludes “<title xml:lang="en">The Teaching on the Indivisible Nature of the Realm of Phenomena</title>,” the
+                        eighth of the one hundred thousand sections of the Dharma
+                        discourse known as The Noble Great Heap of Jewels.</trailer>
                 </div>
                 <div type="colophon" xml:id="UT22084-040-003-colophon">
                     <head type="colophon" tid="235">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-040-003-224"/>
-                    <p tid="228">This was translated, edited, and finalized by the Indian preceptors Jinamitra and Surendrabodhi and the
+                    <p tid="228">Translated, edited, and finalized by the Indian preceptors Jinamitra and Surendrabodhi and the
                         translator-editor Bandé Yeshé Dé.</p>
                 </div>
             </div>
