--- a/translations/kangyur/translations/040-005_toh54-the_exposition_on_the_universal_gateway.xml
+++ b/translations/kangyur/translations/040-005_toh54-the_exposition_on_the_universal_gateway.xml
@@ -32,7 +32,7 @@
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-95">Celso Wilkinson</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.8 <date>2021</date>
+                <edition>v 1.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -72,7 +72,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-07-27T21:55:21.353Z" user="admin">27/07/2021 21:55:21</note>
+                <note type="lastUpdated" date-time="2022-07-10T13:00:47.23Z" user="admin">10/07/2022 13:00:47</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-18T19:47:29.352Z" user="laura">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-10-18T19:47:29.352Z" user="laura">2.c</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:10:19.874Z" user="mike">2.d</note>
@@ -94,7 +94,7 @@
     <note type="updated" update="text-version" value="1.0.5" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
     <note type="updated" update="text-version" value="1.0.6" date-time="2021-01-04T21:02:04.466Z" user="laura">Updated colophon to Bandé</note>
     <note type="updated" update="text-version" value="1.0.7" date-time="2021-02-12T18:03:37.608Z" user="celso">"scholar" to "preceptor" in colophon</note>
-    <note type="updated" update="text-version" value="1.0.8" date-time="2021-07-27T21:55:18.131Z" user="celso">kiṃnara to kinnara, fixed a few glossary spellings</note>
+    <note type="updated" update="text-version" value="1.0.8" date-time="2021-07-27T21:55:18.131Z" user="celso">kiṃnara to kinnara, fixed a few glossary spellings</note>    <note type="updated" update="text-version" value="1.0.9" date-time="2022-07-10T13:00:43.408Z" user="john">Harmonization of trailer and colophon</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1609,15 +1609,14 @@
                         Prince Mañjuśrī, Venerable Ānanda, and the whole world with its gods,
                         humans, asuras, and gandharvas rejoiced and praised the Blessed One’s words. </p>
                     <milestone unit="chunk" xml:id="UT22084-040-005-284"/>
-                    <trailer tid="230">This completes <title xml:lang="en">The Universal
-                            Gateway</title>, the tenth chapter within the
-                        one-hundred-thousand-chapter Dharma discourse of The Noble Great Heap of
-                        Jewels.</trailer>
+                    <trailer tid="230">This concludes <title xml:lang="en">The Exposition on the Universal
+                            Gateway</title>, the tenth of the one hundred thousand sections of the Dharma discourse 
+                        known as The Noble Great Heap of Jewels.</trailer>
                 </div>
                     <div type="colophon" xml:id="UT22084-040-005-colophon">
                         <head type="colophon" tid="231">Colophon</head>
                         <milestone unit="chunk" xml:id="UT22084-040-005-285"/>
-                        <p tid="232">It was translated, edited, and finalized by the Indian preceptors Jinamitra
+                        <p tid="232">Translated, edited, and finalized by the Indian preceptors Jinamitra
                             and Surendrabodhi along with the chief editor-translator Bandé Yeshé
                             Dé.</p>
                     </div>
