--- a/translations/kangyur/translations/041-004_toh59-the_array_of_virtues_of_the_manjusri_buddha_realm.xml
+++ b/translations/kangyur/translations/041-004_toh59-the_array_of_virtues_of_the_manjusri_buddha_realm.xml
@@ -29,7 +29,7 @@
                     Nikita and Sammy Zhang </sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.1 <date>2021</date>
+                <edition>v 1.2.2 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -62,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T16:01:58.816Z" user="admin">29/06/2022 16:01:58</note>
+                <note type="lastUpdated" date-time="2022-07-10T13:04:02.116Z" user="admin">10/07/2022 13:04:02</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:13.521Z" user="mike">2.f</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-06-04T13:35:40.038Z" user="line-tofte">2.e</note>
@@ -87,6 +87,7 @@
                 <note type="updated" update="text-version" value="1.1.1" date-time="2021-07-15T23:41:00.963Z" user="mike">Source text typo corrected</note>
                 <note type="updated" update="text-version" value="1.2.0" date-time="2021-11-08T11:32:57.312Z" user="john">Corrected 1.3 and a few minor edits in setting.</note>
                 <note type="updated" update="text-version" value="1.2.1" date-time="2022-06-29T16:01:51.209Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="1.2.2" date-time="2022-07-10T13:03:58.248Z" user="john">Harmonization of trailer and colophon</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -2743,14 +2744,14 @@
                         asuras, and gandharvas all rejoiced and praised the speech of the Blessed One.</p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-041-004-345"/>
-                    <trailer tid="370">This completes “The Array of Virtues of Mañjuśrī’s Buddha Realm.” It is the
-                        fifteenth chapter within the one hundred thousand sections of the Dharma discourse known as “The
-                        Noble Great Heap of Jewels.”</trailer>
+                    <trailer tid="370">This concludes <title xml:lang="en">The Array of Virtues of Mañjuśrī’s Buddha Realm</title>, the
+                        fifteenth of the one hundred thousand sections of the Dharma discourse known as The
+                        Noble Great Heap of Jewels.</trailer>
                 </div>
                 <div type="colophon" xml:id="UT22084-041-004-colophon">
                     <head type="colophon" tid="371">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-041-004-346"/>
-                    <p tid="372">This was translated, proofed, and finalized after being revised according to the
+                    <p tid="372">Translated, proofed, and finalized after being revised according to the
                         new terminological register by the Indian preceptors Śīlendrabodhi and Jinamitra, as well as the
                         editor-translator Bandé Yeshé Dé.</p>
                 </div>
