--- a/translations/kangyur/translations/042-002_toh61-questions_of_purna.xml
+++ b/translations/kangyur/translations/042-002_toh61-questions_of_purna.xml
@@ -38,7 +38,7 @@
                 <sponsor ref="sponsors.xml#sponsor-200">王学文 and 马国凤</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.17 <date>2021</date>
+                <edition>v 1.2.19 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -73,7 +73,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-14T08:00:22.706Z" user="admin">14/06/2022 08:00:22</note>
+                <note type="lastUpdated" date-time="2022-07-10T13:04:51.795Z" user="admin">10/07/2022 13:04:51</note>
                 <tei:note type="updated" update="text-version" value="v 1.0.1" date-time="2019-02-22T10:36:15.278Z" user="admin">v 1.0.1 2019</tei:note>
                 <tei:note type="updated" update="text-version" value="v 1.03" date-time="2019-06-11T12:08:17.893Z" user="mike">v 1.03 2019</tei:note>
                 <tei:note type="updated" update="text-version" value="v 1.04" date-time="2019-06-13T12:34:06.969Z" user="laura">v 1.04 2019</tei:note>
@@ -110,6 +110,8 @@
                 <tei:note type="updated" update="text-version" value="1.2.14" date-time="2021-06-12T17:50:06.109Z" user="celso">"Elephant Hand" to "Elephant Trunk"</tei:note>
                 <tei:note type="updated" update="text-version" value="1.2.15" date-time="2021-07-28T18:39:57.459Z" user="celso">kiṃnara to kinnara, fixed a few glossary spellings</tei:note>
                 <note type="updated" update="text-version" value="1.2.16" date-time="2021-07-30T18:56:52.862Z" user="celso">fixed typo in glossary</note>
+                <note type="updated" update="text-version" value="1.2.18" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.2.19" date-time="2022-07-10T13:04:47.838Z" user="john">Harmonization of trailer and colophon</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -289,7 +291,7 @@
                         texts like this one were not authentic Buddhist scriptures. That this text
                         addresses such issues directly suggests that it may have first appeared in
                         writing at a time when the Bodhisattva Vehicle was still controversial and
-                        had not yet been widely adopted. Lastly, in chapter 8 Pūrṇa praises the
+                        had not yet been widely adopted. Lastly, in Chapter 8 Pūrṇa praises the
                         Buddha’s teaching and makes a commitment to follow the path of the Great
                         Vehicle himself, in order to liberate all beings from suffering.</tei:p>
                 </div>
@@ -5476,9 +5478,9 @@
                             Pūrṇa</title>.</trailer>
                     <tei:milestone unit="chunk" xml:id="UT22084-042-002-600"/>
                     <lb/>
-                    <trailer tid="591">This concludes the chapter called “<title xml:lang="en">The
-                            Questions of Pūrṇa</title>,” the seventeenth in the
-                        one-hundred-thousand-chapter Dharma discourse known as “<title xml:lang="en">The Noble Great Heap of Jewels</title>.”</trailer>
+                    <trailer tid="591">This concludes <title xml:lang="en">The
+                            Questions of Pūrṇa</title>, the seventeenth of the
+                        one hundred thousand sections of the Dharma discourse known as The Noble Great Heap of Jewels.</trailer>
                 </div>
             </div>
         </body>
