--- a/translations/kangyur/translations/043-006_toh69-inspiring_determination.xml
+++ b/translations/kangyur/translations/043-006_toh69-inspiring_determination.xml
@@ -29,7 +29,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.18 <date>2022</date>
+                <edition>v 1.1.20 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-14T08:04:55.947Z" user="admin">14/06/2022 08:04:55</note>
+                <note type="lastUpdated" date-time="2022-07-10T18:26:09.953Z" user="admin">10/07/2022 18:26:09</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:10:39.102Z" user="mike">2.d</note>
@@ -143,6 +143,8 @@
                 <note type="updated" update="text-version" value="1.1.16" date-time="2022-01-04T21:46:42.243Z" user="celso">karma to karman in Skt.
                     field glossary</note>
                 <note type="updated" update="text-version" value="1.1.17" date-time="2022-04-11T13:18:43.346Z" user="laura">Bibliography update</note>
+                <note type="updated" update="text-version" value="1.1.19" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.1.20" date-time="2022-07-10T18:26:06.148Z" user="john">Harmonization of trailer and colophon</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1770,14 +1772,14 @@
                         present, the venerable Ānanda along with the world’s gods, humans, asuras and gandharvas, rejoiced in and extolled what the
                         Blessed One had said.</p>
                     <milestone unit="chunk" xml:id="UT22084-043-006-308"/>
-                    <trailer tid="285">This completes “Inspiring Determination,” the twenty-fifth chapter of “The Great Heap of Jewels,” a noble
-                        account of Dharma in one hundred thousand chapters.</trailer>
+                    <trailer tid="285">This concludes <title xml:lang="en">Inspiring Determination</title>, the twenty-fifth of the one hundred thousand 
+                        sections of the Dharma discourse known as The Noble Great Heap of Jewels.</trailer>
                 </div>
                 <div type="colophon" xml:id="UT22084-043-006-colophon">
                     <head type="colophon" tid="286">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-043-006-309"/>
-                    <p tid="287">The Indian preceptors Jinamitra and Surendrabodhi, along with the translator and editor Bandé Yeshé Dé, among others,
-                        translated, edited, and finalized this text.</p>
+                    <p tid="287">Translated, edited, and finalized by the Indian preceptors Jinamitra and Surendrabodhi along with the translator and 
+                        editor Bandé Yeshé Dé, among others.</p>
                 </div>
             </div>
         </body>
